src/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to declaratively enable/disable custom triggers.</description>
    <fields>
        <fullName>IsAfterDeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Delete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAfterInsertDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Insert Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAfterUndeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Undelete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAfterUpdateDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBeforeDeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Delete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBeforeInsertDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Insert Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBeforeUpdateDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before Update Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable the trigger</inlineHelpText>
        <label>Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>